--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "firebase-tools": "^9.16.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
