--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.2",
     "firebase": "^8.9.1",
     "firebase-tools": "^9.16.5",
     "react": "^18.1.0",
